# Prisma

./: .env.example  .gitignore  README.md  STUDIO.md  agent_langgraph.drawio  mcp_registry.json  pyproject.toml
logs/2025-07-02T11-18-38_open_my_camera/: final_answer.txt
logs/2025-07-02T11-21-50_open_my_camera/: original_query.txt  prompt.txt
logs/2025-07-02T11-39-06_open_my_camrea/: original_query.txt  prompt.txt
logs/2025-07-02T12-00-10_open_camera/: prompt.txt
runs/64ac04f8-05e2-4d42-bc95-ba44274200f1/: events.jsonl
runs/d68a44d0-eb84-4906-95d9-6bfe98857a24/: events.jsonl
runs/d68a44d0-eb84-4906-95d9-6bfe98857a24/artifacts/: final_answer.txt
runs/f7d6df35-d1f9-45e3-9b02-4692cce5d7b7/: events.jsonl
runs/f7d6df35-d1f9-45e3-9b02-4692cce5d7b7/artifacts/: final_answer.txt
runs/f8413334-ea3b-4770-93ce-f1a5a6b8e982/: events.jsonl
runs/f8413334-ea3b-4770-93ce-f1a5a6b8e982/artifacts/: final_answer.txt
src/config/: configuration.py  llm_type.py  loader.py
src/core/: prisma.py  tools.py  workflow_helpers.py
src/core/graph/: codeReActLoop.py  decision_engine.py  (+1 more)
src/prompts/: code_correction.md  manager_autonomous.md  manager_interrupt.md  mcp_brainstorming.md  planner_subtasks.md  query_mcp_registry.md  script.md  template.py
src/questions/: capability_questions.json
src/types/: __init__.py  state.py  workflow.py
src/utils/: cache_helper.py  capability_resolver.py  code_runner.py  env_manager.py  event_logger.py  llm_helper.py  mcp_helper.py  multimodal_helper.py  reAct.py  run_artifact.py  run_logger.py  web_agent.py  web_helper.py
(+11 files in other folders)
